--- a/findly-builder/src/app/scss/styles.scss
+++ b/findly-builder/src/app/scss/styles.scss
@@ -1387,10 +1387,10 @@ div.divBlockEmptylastChild:first-child {
     }
     .tooltip-inner{
         background-color: #26344a;
-        max-width: 254px;
-        width: 254px;
+        max-width: 200px;
+        min-width: 200px;
         text-align: center;
-        padding: 30px;
+        padding: 15px;
         line-height: 16px;
         font-size: 12px;
         color: #fff;
